* ChangeLog
Release 1.0 Start 21/05/2020
01. added --release option to specify release on command line
02. added Provides: qmail-libs